wip: reworking record serializer